--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: "Build & Release" # Workflow name
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
 jobs: # Telling what jobs we need to happen
   build: # Specify the building name and machine
     name: Build & Release # you can name the build whatever you want
